--- a/init.tex
+++ b/init.tex
@@ -14,6 +14,7 @@
 \usepackage{tcolorbox}
 \usepackage{lmodern}
 \usepackage{xcolor}
+\usepackage{fontawesome}
 \usemintedstyle{bw}
 \usepackage[% colorlinks=true, pdfborder={0 0 0}, linkcolor=red ]{hyperref}
 
