--- a/init.tex
+++ b/init.tex
@@ -16,7 +16,7 @@
 \usepackage{xcolor}
 \usepackage{fontawesome}
 \usemintedstyle{bw}
-\usepackage[% colorlinks=true, pdfborder={0 0 0}, linkcolor=red ]{hyperref}
+\usepackage[colorlinks=true, pdfborder={0 0 0}, linkcolor=red ]{hyperref}
 
 \newtcbox{\code}[1][black]{on line,
 arc=2pt,colback=#1!10!white,colframe=white,
