--- a/init.tex
+++ b/init.tex
@@ -24,7 +24,7 @@ before upper={\rule[-3pt]{0pt}{10pt}},boxrule=1pt,
 boxsep=0pt,left=2pt,right=2pt,top=1pt,bottom=.5pt}
 
 
-\title{MAT1120\\Oblig 2}%
+\title{Tittel}%
 \author{Brage Wiseth}%
 \date{\today}%
 % \setmainfont{FreeSans}
