--- a/init.tex
+++ b/init.tex
@@ -40,17 +40,15 @@ boxsep=0pt,left=2pt,right=2pt,top=1pt,bottom=.5pt}
 
 
 
-% \begin{tcolorbox}[colframe=white]
-%     \textbf{tcolorbox}
-% \end{tcolorbox}
+
 
 % \begin{figure}[!htb]
 %     \centering
-%     \resizebox{0.28\textwidth}{!}{\input{figur.pdf_tex}}
+%     \resizebox{0.28\textwidth}{!}{\input{.pdf_tex}}
 % \end{figure}
 
 % \begin{minipage}[t]{.46\linewidth}
-    % \includegraphics[width=78mm]{hastighetx.pdf}
+    % \includegraphics[width=78mm]{.pdf}
 % \end{minipage}
 
 \end{document}
