--- a/init.tex
+++ b/init.tex
@@ -32,10 +32,12 @@ boxsep=0pt,left=2pt,right=2pt,top=1pt,bottom=.5pt}
 
 \begin{document}%
 \normalsize%
-\maketitle%
+% \maketitle%
 % \normalfont
 
+$$\frac{1}{2}$$
 
+![](g19.svg)
 
 
 
