--- a/init.tex
+++ b/init.tex
@@ -27,8 +27,12 @@ boxsep=0pt,left=2pt,right=2pt,top=1pt,bottom=.5pt}
 \title{Tittel}%
 \author{Brage Wiseth}%
 \date{\today}%
+
 % \setmainfont{FreeSans}
-\setmonofont{Iosevka Fixed Curly}
+\setmainfont{SF Pro Display}
+
+\setmonofont{Iosevka Fixed Curly Extended}
+% \setmonofont[medium]{Jetbrains Mono}
 
 \begin{document}%
 \normalsize%
